[tool.poetry]
name = "poetry"
version = "0.0.1"
description = "homework"
authors = ["yavv951 <vadimv95189@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
selene = "^2.0.0b8"


[tool.poetry.dev-dependencies]
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
